# bazel-golang-hello-world

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
hello-world/: BUILD.bazel
sum/: BUILD.bazel  go.mod  main  main.go  main_test.go
