load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "sum_lib",
    srcs = ["main.go"],
    importpath = "github.com/shubhag/bazel-golang-hello-world/sum",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "sum",
    embed = [":sum_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "sum_test",
    srcs = ["main_test.go"],
    embed = [":sum_lib"],
)
